--- a/front.html
+++ b/front.html
@@ -37,7 +37,7 @@
         @media(max-width:400px){
             .container{
                 flex-wrap: wrap;
-                background-color: green;
+                background-color: blue;
         }
             
         }
