--- a/front.html
+++ b/front.html
@@ -51,6 +51,7 @@
         <div class="item">item4</div>
         <div class="item">item5</div>
         <div class="item">item6</div>
+        <div class="item">item7</div>
 
         </div
 </body>
